cluster/apps/developer/paperclip/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperclip
  namespace: developer
spec:
  selector:
    app: paperclip
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3100
