cluster/apps/developer/paperclip/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperclip-http
  namespace: developer
spec:
  hostnames:
    - paperclip.btkostner.network
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: paperclip
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
